# VET-APP

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  vercel.json
.github/workflows/: ci.yml  lint-and-test.yml
apps/api/: main.py
apps/mobile_app/: README.md  package.json  pubspec.yaml  vercel.json
apps/streamlit_app/: app.py
docs/architecture/: overview.md  repo_bootstrap_instructions.md
docs/decisions/: 001-flutter-first-mobile-client.md  001-use-streamlit-for-mvp.md  002-modular-monolith-first.md  003-api-first-even-with-flutter.md  003-api-first-even-with-streamlit.md  004-llm-provider-abstraction.md  005-supabase-for-initial-auth-and-data.md
docs/frontend/: 00-project-overview.md  01-repo-structure.md  02-feature-modules.md  03-navigation-and-screens.md  04-design-system.md  05-supabase-integration.md  06-state-management-and-data-flow.md  07-mcp-workflow.md  08-codex-bootstrap-prompt.md  09-mobile-preview-state.md  10-ux-review-2026-03-26.md  README.md
docs/llm/: 01_spec_architettura_llm.md  02_spec_engine_fonti_e_affidabilita.md  03_spec_schema_dati_supabase.md  04_spec_pipeline_rag_e_prompting.md  05_spec_roadmap_implementazione_codex.md  README.md
docs/product/: 01_project_charter.md  02_visione_prodotto_e_principi.md  03_scope_mvp_v1.md  04_personas_jtbd.md  05_user_flows_e_core_loop.md  06_backlog_prioritizzato.md  07_roadmap_operativa_12_settimane.md  08_metriche_validazione.md  09_rischi_dipendenze_e_decision_log.md  10_prd_mvp_modulare.md  11_cartella_clinica_operativa.md  README.md  (+3 more)
tests/: conftest.py
(+162 files in other folders)
